// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен обогащать список клиентов каунтерами 1`] = `
Object {
  "items": Array [
    Object {
      "clientData": Object {
        "id": 578,
      },
      "offersCount": 7,
    },
    Object {
      "clientData": Object {
        "id": 579,
      },
      "offersCount": 7,
    },
    Object {
      "clientData": Object {
        "id": 580,
      },
      "offersCount": 7,
    },
  ],
  "pagination": Object {
    "page_num": 1,
    "page_size": 15,
    "total_count": 117,
    "total_page_count": 8,
  },
}
`;

exports[`должен обогащать список клиентов каунтерами, если customerRole == agency 1`] = `
Object {
  "items": Array [
    Object {
      "clientData": Object {
        "id": 578,
      },
      "offersCount": 0,
    },
  ],
  "pagination": Object {
    "page_num": 1,
    "page_size": 15,
    "total_count": 117,
    "total_page_count": 8,
  },
}
`;
